--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: build-bazzite-arch
+name: build-dev-arch
 on:
   pull_request:
     branches:
@@ -9,7 +9,7 @@ on:
     branches:
       - main
 env:
-    IMAGE_NAME: bazzite-arch
+    IMAGE_NAME: dev-arch
     IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
 
 jobs:
@@ -26,7 +26,7 @@ jobs:
         include:
           - is_latest: true
             is_stable: true
-    steps: 
+    steps:
       # Checkout push-to-registry action GitHub repository
       - name: Checkout Push to Registry action
         uses: actions/checkout@v3
@@ -41,8 +41,8 @@ jobs:
           labels: |
             org.opencontainers.image.title=${{ env.IMAGE_NAME }}
             org.opencontainers.image.version=${{ steps.labels.outputs.VERSION }}
-            org.opencontainers.image.description=These images are not meant to be used as a host operating system. Please see bazzite-desktop for more information.
-            io.artifacthub.package.readme-url=https://raw.githubusercontent.com/ublue-os/bazzite-arch/main/README.md
+            org.opencontainers.image.description=These images are not meant to be used as a host operating system. Please see BlueWhaleOS for more information.
+            io.artifacthub.package.readme-url=https://raw.githubusercontent.com/eyecantcu/dev-arch/main/README.md
 
       - name: Generate tags
         id: generate-tags
